--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pypaz==0.1.8
 PySide6==6.3.1
 PySide6-Addons==6.3.1
 PySide6-Essentials==6.3.1
+python-decouple==3.6
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.8
